--- a/views/ideas/edit.handlebars
+++ b/views/ideas/edit.handlebars
@@ -4,14 +4,15 @@
 {{/each}}
 <div class="card card-body">
     <h3>keep ideas</h3>
-    <form action="/ideas" method="POST" role="form">
+    <form action="/ideas/{{idea.id}}?_method=PUT" method="post">
+        <input type="hidden" name="_method" value="PUT">
         <div class="form-group">
             <label for="title">Title</label>
-            <input type="text" class="form-control" name="title">
+            <input type="text" class="form-control" name="title" value="{{idea.title}}" required>
         </div>
         <div class="form-group">
             <label for="details">Details</label>
-            <textarea type="text" class="form-control" name="details"></textarea>
+            <textarea type="text" class="form-control" name="details" >{{idea.details}}</textarea>
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
