--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -3,7 +3,7 @@
         <h1>{{title}}</h1>
         <p>keep your idea on chrome</p>
         <p>
-            <a class="btn btn-primary btn-lg" href="/idea/add">add ideas</a>
+            <a class="btn btn-primary btn-lg" href="/ideas/add">add ideas</a>
         </p>
     </div>
 </div>
