--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-        <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <title>keep ideas</title>
 </head>
 
@@ -15,6 +15,7 @@
     {{> _navbar}}
     <div class="container">
         {{>_msg}}
+        {{>_errors}}
         {{{body}}}
     </div>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
