--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -15,6 +15,12 @@
                 </li>
             </ul>
             <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a href="/user/login" class="nav-link">Login</a>
+                </li>
+                 <li class="nav-item">
+                    <a href="/user/register" class="nav-link">Register</a>
+                </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" data-toggle="dropdown" id="navbarDropdownMenuLink">Keep idea</a>
                     <div class="dropdown-menu">
