--- a/views/users/register.handlebars
+++ b/views/users/register.handlebars
@@ -3,24 +3,24 @@
         <div class="card card-body">
             <img class="logo" src="/img/video.jpg" alt="">
             <h3 class="text-center">Account Register</h3>
-            <form>
-                <div class="form-group">
-                    <label for="Email">Email</label>
-                    <input type="email" class="form-control" required>
-                </div>
+            <form action="/user/register" method="POST">
                 <div class="form-group">
                     <label for="username">Username</label>
-                    <input type="text" class="form-control">
+                    <input type="text" name="username" value="{{username}}" class="form-control" required>
+                </div>
+                <div class="form-group">
+                    <label for="Email">Email</label>
+                    <input type="email" name="email" value="{{email}}" class="form-control" required>
                 </div>
                 <div class="form-group">
                     <label for="password">Password</label>
-                    <input type="password" class="form-control">
+                    <input type="password" name="password" value="{{password}}" class="form-control" required>
                 </div>
                 <div class="form-group">
-                    <label for="password">RePassword</label>
-                    <input type="password" class="form-control">
+                    <label for="password">Confirm Password</label>
+                    <input type="password" name="password2" value="{{password2}}" class="form-control" required>
                 </div>
-                <button type="submit"  class="btn btn-primary" style="margin: 0px auto;display: table;">Submit</button>
+                <button type="submit" class="btn btn-primary" style="margin: 0px auto;display: table;">Submit</button>
             </form>
 
         </div>
