--- a/views/users/login.handlebars
+++ b/views/users/login.handlebars
@@ -3,7 +3,7 @@
         <div class="card card-body">
             <img class="logo" src="/img/video.jpg" alt="">
             <h3 class="text-center">Account Login</h3>
-            <form>
+            <form method="post" action="/user/login">
                 <div class="form-group">
                     <label for="Email">Email</label>
                     <input type="email" class="form-control" required>
